# beamforming-alg

./: .gitignore  LICENSE  README.md  acoular_demo.py  beamforming-acoular.ipynb  beamforming.py  drone+diesel.h5  pyproject.toml
geo/: 3_by_3.xml  4_mic.xml
